# Morlet

./: README.md  environment.yml  pyproject.toml  requirements.txt
configs/: mst_seed_subject_independent.json
morlet/: __init__.py
morlet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
morlet/datasets/: __init__.py  seed.py  seed_preprocess.py  seediv.py  seediv_preprocess.py  seedv.py  seedv_preprocess.py  seedvii.py  seedvii_preprocess.py
morlet/models/: __init__.py  mst.py  types.py
morlet/utils/: __init__.py  augmentation.py  misc.py
scripts/: downstream.py
